# llm-lora-finetune

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  trainer.py
configs/: bnb.yaml  llama2.yaml  lora_config.yaml  peft_sample.yaml  trainer.yaml
src/: config.py  merge.py  merge_peft.py  trainer.py  utils.py
